--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 <body>
     <div class="container">
-        <h1 id="headline">PJ your birthday is coming!!!</h1>
+        <h1 id="headline">The countdown begins, PJ!!</h1>
+        
+        <p>Your birthday is on its way..</p>
+        <p>It’s almost time, let’s not delay</p>
+        <p>Let us start the countdown</p>
+        <p>To your very special day!</p>
         <div id="countdown">
       <ul>
       <li><span id="days"></span> days</li>
